feat: 급여 관리 API 리팩터링 (FixedExpense 엔티티, CRUD, JWT 인증)
- FixedExpense 엔티티 추가 (Salary 1:N 관계)
- V2 마이그레이션: fixed_expenses 테이블 생성
- Salary 엔티티: totalAmount, 가용 용돈 계산 메서드 추가
- DTO record 변환, 수정/삭제 API 추가
- Controller JWT 인증 기반으로 전환 (RequestParam → SecurityContext)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>