@@ -1,7 +1,11 @@
 package com.budget.api.domain.salary.service;
 
+import com.budget.api.domain.salary.dto.FixedExpenseRequest;
 import com.budget.api.domain.salary.dto.SalaryCreateRequest;
+import com.budget.api.domain.salary.dto.SalaryListResponse;
 import com.budget.api.domain.salary.dto.SalaryResponse;
+import com.budget.api.domain.salary.dto.SalaryUpdateRequest;
+import com.budget.api.domain.salary.entity.FixedExpense;
 import com.budget.api.domain.salary.entity.Salary;
 import com.budget.api.domain.salary.repository.SalaryRepository;
 import com.budget.api.domain.user.entity.User;
@@ -12,8 +16,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,34 +32,78 @@ public class SalaryService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
 
-        salaryRepository.findByUserIdAndYearAndMonth(userId, request.getYear(), request.getMonth())
+        salaryRepository.findByUserIdAndYearAndMonth(userId, request.year(), request.month())
                 .ifPresent(s -> {
                     throw new CustomException(ErrorCode.DUPLICATE_SALARY);
                 });
 
         Salary salary = Salary.create(
                 user,
-                request.getAmount(),
-                request.getYear(),
-                request.getMonth(),
-                request.getFixedExpense(),
-                request.getMemo()
+                request.totalAmount(),
+                request.year(),
+                request.month(),
+                request.memo()
         );
+
+        if (request.fixedExpenses() != null) {
+            request.fixedExpenses().forEach(fe -> {
+                FixedExpense fixedExpense = FixedExpense.builder()
+                        .name(fe.name())
+                        .amount(fe.amount())
+                        .build();
+                salary.addFixedExpense(fixedExpense);
+            });
+        }
 
         Salary savedSalary = salaryRepository.save(salary);
         return SalaryResponse.from(savedSalary);
     }
 
-    public List<SalaryResponse> getSalaries(Long userId) {
-        List<Salary> salaries = salaryRepository.findByUserId(userId);
+    public List<SalaryListResponse> getSalaries(Long userId, Integer year) {
+        if (year == null) {
+            year = LocalDate.now().getYear();
+        }
+        List<Salary> salaries = salaryRepository.findByUserIdAndYear(userId, year);
         return salaries.stream()
-                .map(SalaryResponse::from)
-                .collect(Collectors.toList());
+                .map(SalaryListResponse::from)
+                .toList();
     }
 
-    public SalaryResponse getSalary(Long userId, Integer year, Integer month) {
-        Salary salary = salaryRepository.findByUserIdAndYearAndMonth(userId, year, month)
+    public SalaryResponse getSalary(Long userId, Long salaryId) {
+        Salary salary = salaryRepository.findById(salaryId)
                 .orElseThrow(() -> new CustomException(ErrorCode.SALARY_NOT_FOUND));
+
+        if (!salary.getUser().getId().equals(userId)) {
+            throw new CustomException(ErrorCode.FORBIDDEN);
+        }
+
         return SalaryResponse.from(salary);
+    }
+
+    @Transactional
+    public SalaryResponse updateSalary(Long userId, Long salaryId, SalaryUpdateRequest request) {
+        Salary salary = salaryRepository.findByIdAndUserId(salaryId, userId)
+                .orElseThrow(() -> new CustomException(ErrorCode.SALARY_NOT_FOUND));
+
+        List<FixedExpense> newFixedExpenses = null;
+        if (request.fixedExpenses() != null) {
+            newFixedExpenses = request.fixedExpenses().stream()
+                    .map(fe -> FixedExpense.builder()
+                            .name(fe.name())
+                            .amount(fe.amount())
+                            .build())
+                    .toList();
+        }
+
+        salary.update(request.totalAmount(), request.memo(), newFixedExpenses);
+        return SalaryResponse.from(salary);
+    }
+
+    @Transactional
+    public void deleteSalary(Long userId, Long salaryId) {
+        Salary salary = salaryRepository.findByIdAndUserId(salaryId, userId)
+                .orElseThrow(() -> new CustomException(ErrorCode.SALARY_NOT_FOUND));
+
+        salaryRepository.delete(salary);
     }
 }
